[gd_scene load_steps=5 format=3 uid="uid://diiodgowsdr4u"]

[ext_resource type="Script" path="res://scenes/_legacy/room_logo_legacy/room_logo_legacy.gd" id="1_bedc5"]
[ext_resource type="PackedScene" uid="uid://bnyfbqonp1qby" path="res://scenes/ui/background/background_scrolling_controller.tscn" id="2_8ioem"]
[ext_resource type="PackedScene" uid="uid://b3fbsp14s0uh" path="res://scenes/ui/overlay/ftg_result_overlay_controller.tscn" id="3_lfi8p"]
[ext_resource type="PackedScene" uid="uid://u72mfat08yxv" path="res://scenes/ui/hp_bar_canvas/hp_bar_canvas.tscn" id="4_mln1q"]

[node name="RoomLogoLegacy" type="Node2D"]
script = ExtResource("1_bedc5")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="BackgroundScrollingController" parent="." instance=ExtResource("2_8ioem")]

[node name="FTGResultOverlayController" parent="." instance=ExtResource("3_lfi8p")]

[node name="HPBarCanvas" parent="." instance=ExtResource("4_mln1q")]

[connection signal="request_display_ftg_result" from="." to="FTGResultOverlayController" method="display_ftg_result"]
[connection signal="request_set_all_label_text" from="." to="BackgroundScrollingController" method="set_all_label_text"]
[connection signal="take_damage" from="." to="HPBarCanvas" method="take_damage"]
[connection signal="hp_depleted" from="HPBarCanvas" to="." method="on_game_end"]
